[tool.poetry]
name = "intergalactic-news"
version = "0.1.0"
description = "Get the latest news from intergalactic space."
authors = ["Simon Alibert <alibert.sim@gmail.com>"]
repository = "https://github.com/aliberts/intergalactic-news"
readme = "README.md"
packages = [{include = "inews"}]

[tool.poetry.dependencies]
python = "^3.10"
pyrallis = "^0.3.1"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.104.0"
youtube-transcript-api = "^0.6.1"
pydantic = "^2.4.2"
unidecode = "^1.3.7"
pyyaml = "^6.0.1"
tiktoken = "^0.5.1"
openai = "^0.28.1"
pendulum = "^2.1.2"
boto3 = "^1.28.71"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
